--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,11 +1,9 @@
 name: Hello World
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   print:
